--- a/src/app/grid/grid.component.css
+++ b/src/app/grid/grid.component.css
@@ -14,6 +14,10 @@
   justify-content: space-between;
 }
 
+.div_summary_table {
+  flex: 0 3 auto;
+}
+
 .div_chart {
   flex: 1 1 auto;
   height: 94%;
@@ -42,6 +46,9 @@
   font-weight: bold;
   resize: none;
   overflow-y: hidden;
+  border: none;
+  background-color: transparent;
+  font-family: inherit;
 }
 
 .textarea_title:focus {
