--- a/src/app/scene/column-mapping/column-mapping.component.html
+++ b/src/app/scene/column-mapping/column-mapping.component.html
@@ -1,43 +1,45 @@
-<button class="but_delete" mat-button mat-icon-button matTooltip="Delete irrelevant column"
-        (click)="onRemove.emit()">
-  <mat-icon>delete_forever</mat-icon>
-</button>
-<mat-form-field class="column_name">
-  <input matInput type="text" placeholder="Column Name" [value]="mapping.target.name"
-         (change)="onColumnNameChanged($event.target.value)" [formControl]="columnNameControl">
-  <mat-error *ngIf="columnNameControl.invalid">{{ getColumnNameErrorMessage() }}</mat-error>
-</mat-form-field>
-<mat-form-field class="column_data_type">
-  <mat-select class="select_data_type" placeholder="Data Type" [(value)]="mapping.target.dataType"
-              (selectionChange)="onDataTypeChanged()">
-    <mat-option class="option_data_type" *ngFor="let dataType of columnDefAssistant.selectableDataTypeOf(mapping)"
-                [value]="dataType">
-      {{ dataType }}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
-<mat-form-field class="column_width">
-  <input matInput type="number" placeholder="Width" required min="1" max="9999" step="1"
-         oninput="validity.valid||(value='')" [(ngModel)]="mapping.target.width">
-</mat-form-field>
-<span class="span_source_format" *ngIf="columnDefAssistant.canHaveSourceFormat(mapping)">
-  <mat-form-field class="column_format">
-    <input class="input_source_format" matInput type="text" placeholder="Source Format"
-           [(ngModel)]="mapping.source.format" (keyup.enter)="onChange.emit()" (blur)="onChange.emit()">
+<div>
+  <span>
+    <button class="but_delete" mat-icon-button matTooltip="Delete irrelevant column" (click)="onRemove.emit()">
+      <mat-icon>delete_forever</mat-icon>
+    </button>
+  </span>
+  <mat-form-field class="column_name">
+    <mat-label>Column Name</mat-label>
+    <input matInput [value]="mapping.target.name" (change)="onColumnNameChanged($event.target.value)" [formControl]="columnNameControl">
+    <mat-error *ngIf="columnNameControl.invalid">{{ getColumnNameErrorMessage() }}</mat-error>
   </mat-form-field>
-  <button class="but_refresh_preview" mat-button mat-icon-button matTooltip="Refresh Preview"
-          (click)="onChange.emit()">
-    <mat-icon>refresh</mat-icon>
-  </button>
-  <button class="but_date_formats" mat-button mat-icon-button matTooltip="Show custom format opitons"
-          (click)="openDatePipeFormatPage()">
-    <mat-icon>help</mat-icon>
-  </button>
-</span>
-<mat-form-field class="column_format" *ngIf="columnDefAssistant.canHaveDisplayFormat(mapping)">
-  <mat-select class="select_display_format" placeholder="Display Format" [(value)]="mapping.target.format">
-    <mat-option *ngFor="let format of dateFormats" [value]="format">{{ formattedNow(format) }}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
-<img *ngIf="mapping.warning" src="/assets/warning.png" [matTooltip]="mapping.warning" matTooltipClass="tooltip_warning" />
+  <mat-form-field class="column_data_type">
+    <mat-label>Data Type</mat-label>
+    <mat-select class="select_data_type" [(value)]="mapping.target.dataType" (selectionChange)="onDataTypeChanged()">
+      <mat-option class="option_data_type" *ngFor="let dataType of columnDefAssistant.selectableDataTypeOf(mapping)" [value]="dataType">
+        {{ dataType }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+  <mat-form-field class="column_width">
+    <mat-label>Width</mat-label>
+    <input matInput type="number" required min="1" max="9999" step="1" oninput="validity.valid||(value='')" [(ngModel)]="mapping.target.width">
+  </mat-form-field>
+  <span class="span_source_format" *ngIf="columnDefAssistant.canHaveSourceFormat(mapping)">
+    <mat-form-field class="column_format">
+      <mat-label>Source Format</mat-label>
+      <input class="input_source_format" matInput [(ngModel)]="mapping.source.format" (keyup.enter)="onChange.emit()" (blur)="onChange.emit()">
+    </mat-form-field>
+    <button class="but_refresh_preview" mat-icon-button matTooltip="Refresh Preview" (click)="onChange.emit()">
+      <mat-icon>refresh</mat-icon>
+    </button>
+    <button class="but_date_formats" mat-icon-button matTooltip="Show custom format opitons"
+            (click)="openDatePipeFormatPage()">
+      <mat-icon>help</mat-icon>
+    </button>
+  </span>
+  <mat-form-field class="column_format" *ngIf="columnDefAssistant.canHaveDisplayFormat(mapping)">
+    <mat-label>Display Format</mat-label>
+    <mat-select class="select_display_format" [(value)]="mapping.target.format">
+      <mat-option *ngFor="let format of dateFormats" [value]="format">{{ formattedNow(format) }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+  <img *ngIf="mapping.warning" src="/assets/warning.png" [matTooltip]="mapping.warning" matTooltipClass="tooltip_warning" />
+</div>
