--- a/src/app/shared/component/view-launcher-dialog/view-launcher-dialog.component.html
+++ b/src/app/shared/component/view-launcher-dialog/view-launcher-dialog.component.html
@@ -1,12 +1,16 @@
-<mat-card>
-  <mat-card-subtitle>Create View</mat-card-subtitle>
+<mat-card appearance="outlined">
+
+  <mat-card-header>
+    <mat-card-title>Create View</mat-card-title>
+  </mat-card-header>
+
   <mat-card-content>
     <span *ngIf="views.length > 0">
       <h5>Restore saved view</h5>
       <p>Load a view that has previously been saved.</p>
       <div id="div_views">
         <div *ngFor="let view of views">
-          <button mat-button mat-icon-button (click)="context.loadView(view); dialogRef.close()">
+          <button mat-icon-button (click)="context.loadView(view); dialogRef.close()">
             <mat-icon>open_in_browser</mat-icon>
           </button>
           <span>&nbsp;{{ view.name }} <var>{{ view.modifiedTime | date:'short' }}</var></span>
@@ -16,19 +20,19 @@
     <h5 *ngIf="views.length > 0">Create new view</h5>
     <p>Choose the initial element to be added to the new view.</p>
     <div>
-      <button mat-button mat-icon-button (click)="context.addChart(); dialogRef.close()">
+      <button mat-icon-button (click)="context.addChart(); dialogRef.close()">
         <mat-icon svgIcon="add_chart"></mat-icon>
       </button>
       &nbsp;Chart
     </div>
     <div>
-      <button mat-button mat-icon-button (click)="context.addGraph(); dialogRef.close()">
+      <button mat-icon-button (click)="context.addGraph(); dialogRef.close()">
         <mat-icon svgIcon="add_graph"></mat-icon>
       </button>
       &nbsp;Relationship Graph
     </div>
     <div>
-      <button mat-button mat-icon-button (click)="context.addSummaryTable(); dialogRef.close()">
+      <button mat-icon-button (click)="context.addSummaryTable(); dialogRef.close()">
         <mat-icon svgIcon="add_summary"></mat-icon>
       </button>
       &nbsp;Summary Table
