--- a/src/app/graph/graph-side-bar/graph-side-bar.component.css
+++ b/src/app/graph/graph-side-bar/graph-side-bar.component.css
@@ -29,6 +29,7 @@ button {
   margin: 0px;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of radio that may no longer apply for the MDC version. */
 mat-radio-button {
   margin: 5px;
 }
