--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -49,12 +49,12 @@
             </mat-menu>
 
             <!--
-         <button mat-button mat-icon-button printSectionId="print-section" ngxPrint matTooltip="Print current view"
+         <button mat-icon-button printSectionId="print-section" ngxPrint matTooltip="Print current view"
             [disabled]="elementContexts.length === 0" (click)="printView()">
             <mat-icon>print</mat-icon>
          </button>
          -->
-            <button mat-button mat-icon-button matTooltip="Save current view"
+            <button mat-icon-button matTooltip="Save current view"
                     [disabled]="!elementContexts || elementContexts.length === 0" (click)="saveView()">
                <mat-icon>save_alt</mat-icon>
             </button>
@@ -73,13 +73,13 @@
             </mat-menu>
 
             &nbsp;&nbsp;&nbsp;
-            <button mat-button mat-icon-button matTooltip="Add Chart" (click)="addChart()">
+            <button mat-icon-button matTooltip="Add Chart" (click)="addChart()">
                <mat-icon svgIcon="add_chart"></mat-icon>
             </button>
-            <button mat-button mat-icon-button matTooltip="Add Relationship Graph" (click)="addGraph()">
+            <button mat-icon-button matTooltip="Add Relationship Graph" (click)="addGraph()">
                <mat-icon svgIcon="add_graph"></mat-icon>
             </button>
-            <button mat-button mat-icon-button matTooltip="Add Summary" (click)="addSummaryTable()">
+            <button mat-icon-button matTooltip="Add Summary" (click)="addSummaryTable()">
                <mat-icon svgIcon="add_summary"></mat-icon>
             </button>
          </div>
@@ -87,56 +87,52 @@
 
       <div #content class="div_content">
          <mat-grid-list #content id="grid_list" [cols]="gridColumns" [rowHeight]="gridCellRatio" gutterSize="10">
-            <mat-grid-tile class="mat-elevation-z8" *ngFor="let context of elementContexts"
-                           [colspan]="context.gridColumnSpan" [rowspan]="context.gridRowSpan">
+            <mat-grid-tile class="mat-elevation-z8" *ngFor="let context of elementContexts" [colspan]="context.gridColumnSpan" [rowspan]="context.gridRowSpan">
                <div #elementContainer class="div_element">
                   <div class="div_element_header">
                      <div style="display: flex">
-                        <button class="but_config" mat-icon-button [matMenuTriggerFor]="moreMenu"
-                                *ngIf="context.getSupportedExportFormats().length > 0">
+                        <button class="but_config" mat-icon-button [matMenuTriggerFor]="moreMenu" *ngIf="context.getSupportedExportFormats().length > 0">
                            <mat-icon>more_vert</mat-icon>
                         </button>
                         <mat-menu #moreMenu="matMenu">
-                           <button mat-menu-item *ngFor="let exportFormat of context.getSupportedExportFormats()"
-                                   (click)="saveAs(context, exportFormat)">
+                           <button mat-menu-item *ngFor="let exportFormat of context.getSupportedExportFormats()" (click)="saveAs(context, exportFormat)">
                               <mat-icon>insert_drive_file</mat-icon>
                               <span>Save As {{ exportFormat }}</span>
                            </button>
                         </mat-menu>
-                        <button id="configButton" class="but_config" mat-button mat-icon-button
+                        <button id="configButton" class="but_config" mat-icon-button
                                 matTooltip="Configure..." (click)="configure($event, context)">
                            <mat-icon>settings</mat-icon>
                         </button>
                         <button [ngClass]="isShowResizableMargin(context) ? 'but_config_active' : 'but_config'"
-                                *ngIf="isChartContext(context)" mat-button mat-icon-button
+                                *ngIf="isChartContext(context)" mat-icon-button
                                 [color]="isShowResizableMargin(context) ? 'primary' : null"
-                                matTooltip="Toggle resizable chart margin"
-                                (click)="asChartContext(context).toggleShowResizableMargin()">
+                                matTooltip="Toggle resizable chart margin" (click)="asChartContext(context).toggleShowResizableMargin()">
                            <mat-icon>crop_free</mat-icon>
                         </button>
                      </div>
                      <div class="div_title">
-                        <textarea matInput class="textarea_title" type="text" [value]="context.getTitle()"
-                                  [koiaTextareaMaxRows]="2" (keyup)="context.title = $event.target.value"></textarea>
+                        <textarea matInput class="textarea_title" type="text" [value]="context.getTitle()" [koiaTextareaMaxRows]="2"
+                                  (keyup)="context.title = $event.target.value"></textarea>
                      </div>
-                     <button class="but_warning" mat-icon-button *ngIf="context.warning" [matTooltip]="context.warning"
-                             color="warn">
+                     <button class="but_warning" mat-icon-button *ngIf="context.warning" [matTooltip]="context.warning" color="warn">
                         <mat-icon>error</mat-icon>
                      </button>
                      <button class="but_close" mat-icon-button matTooltip="Delete" (click)="removeElement(context)">
                         <mat-icon>delete_forever</mat-icon>
                      </button>
                   </div>
-                  <div class="div_chart">
-                     <koia-summary-table *ngIf="isSummaryContext(context)" [gridView]="true" [context]="context"
-                                         [entries$]="entries$" (onRemove)="removeElement($event)">
+                  <div *ngIf="isSummaryContext(context)" class="div_summary_table">
+                     <koia-summary-table [gridView]="true" [context]="context" [entries$]="entries$" (onRemove)="removeElement($event)">
                      </koia-summary-table>
-                     <koia-chart *ngIf="isChartContext(context)" [context]="context" [entries$]="entries$"
-                                 [parentConstraintSize]="true" (onRemove)="removeElement($event)"
+                  </div>
+                  <div *ngIf="isChartContext(context)" class="div_chart">
+                     <koia-chart [context]="context" [entries$]="entries$" [parentConstraintSize]="true" (onRemove)="removeElement($event)"
                                  (onWarning)="notifyWarning($event)">
                      </koia-chart>
-                     <koia-graph *ngIf="isGraphContext(context)" [context]="context" [entries$]="entries$"
-                                 [parentConstraintSize]="true" (onRemove)="removeElement($event)"
+                  </div>
+                  <div *ngIf="isGraphContext(context)" class="div_chart">
+                     <koia-graph [context]="context" [entries$]="entries$" [parentConstraintSize]="true" (onRemove)="removeElement($event)"
                                  (onWarning)="notifyWarning($event)">
                      </koia-graph>
                   </div>
