--- a/src/app/main-toolbar/range-filter/range-filter.component.html
+++ b/src/app/main-toolbar/range-filter/range-filter.component.html
@@ -1,31 +1,31 @@
 <div class="div_range_filter" *ngIf="filter">
-  <button mat-button color="accent" mat-icon-button matTooltip="Define slider step size" [matMenuTriggerFor]="stepmenu">
+  <button color="accent" mat-icon-button matTooltip="Define slider step size" [matMenuTriggerFor]="stepmenu">
     <mat-icon [matBadge]="filter.selectedStepAbbrev" matBadgePosition="below" matBadgeColor="accent">
       linear_scale
     </mat-icon>
   </button>
   <mat-menu #stepmenu="matMenu">
     <button mat-menu-item *ngFor="let step of filter.availableSteps" [disabled]="step === filter.selectedStep"
-      (click)="filter.onStepChanged(step)">
+            (click)="filter.onStepChanged(step)">
       <span>Step by {{ filter.formatStep(step) }}</span>
     </button>
   </mat-menu>
   &nbsp;&nbsp;
   <ngx-slider [value]="filter.selValueRange.min" [highValue]="filter.selValueRange.max"
-    [options]="filter.sliderOptions" (highValueChange)="filter.selValueRange.maxExcluding = false"
-    (userChangeEnd)="onChanged($event)"></ngx-slider>
-  <button class="but_reset_range_filter" mat-button color="accent" mat-icon-button matTooltip="Reset value range filter"
-    [disabled]="!filter.isFiltered()" (click)="reset()">
+              [options]="filter.sliderOptions" (highValueChange)="filter.selValueRange.maxExcluding = false"
+              (userChangeEnd)="onChanged($event)"></ngx-slider>
+  <button class="but_reset_range_filter" color="accent" mat-icon-button matTooltip="Reset value range filter"
+          [disabled]="!filter.isFiltered()" (click)="reset()">
     <mat-icon>undo</mat-icon>
   </button>
-  <button class="but_remove_range_filter" mat-button mat-icon-button matTooltip="Remove value range filter"
-    (click)="onRemove.emit()">
+  <button class="but_remove_range_filter" mat-icon-button matTooltip="Remove value range filter"
+          (click)="onRemove.emit()">
     <mat-icon>remove_circle_outline</mat-icon>
   </button>
 </div>
 <div class="div_range_column_name">{{ filter.column.name }}
   <span [class]="filter.inverted ? 'span_outside_range_menu_trigger' : 'span_menu_trigger'"
-    [matMenuTriggerFor]="rangeTypeMenu">{{ filter.inverted ? 'is outside range' : 'is inside range' }}</span>
+        [matMenuTriggerFor]="rangeTypeMenu">{{ filter.inverted ? 'is outside range' : 'is inside range' }}</span>
   <mat-menu #rangeTypeMenu="matMenu">
     <button mat-menu-item [disabled]="!filter.inverted" (click)="onInvertedChanged(false)">
       <span>is inside range</span>
