--- a/src/app/scene/column-mapping/column-mapping.component.css
+++ b/src/app/scene/column-mapping/column-mapping.component.css
@@ -1,30 +1,35 @@
+div {
+   display: flex;
+   align-items: center;
+}
+
 .column_name {
-   width: 220px;
-   padding-right: 10px;
+   width: 20em;
+   padding-right: 1em;
 }
 
 .column_data_type {
-   width: 70px;
-   padding-right: 10px;
+   width: 8em;
+   padding-right: 1em;
 }
- 
+
 .column_width {
-   width: 50px;
-   padding-right: 10px;
+   width: 6em;
+   padding-right: 1em;
 }
 
 .span_source_format {
-   margin-right: 10px;
+   margin-right: 1em;
    vertical-align: bottom;
 }
 
 .column_format {
-   width: 200px;
+   width: 16em;
 }
 
-::ng-deep .tooltip_warning {  
-  color: red !important;;
-  background-color: rgb(218, 196, 74);
-  white-space: pre-line;
-  max-width: 800px !important;
+::ng-deep .tooltip_warning {
+   color: red !important;
+   background-color: rgb(218, 196, 74);
+   white-space: pre-line;
+   max-width: 800px !important;
 }
