--- a/src/app/shared/component/color-scheme-selection/color-scheme-selection.component.html
+++ b/src/app/shared/component/color-scheme-selection/color-scheme-selection.component.html
@@ -1,5 +1,5 @@
-Categorical
 <ng-container *ngIf="colorOptions">
+    Categorical
     <div *ngFor="let s of categoricalSchemes">
         <img [src]="imagesDir + s + '.png'" [class]="s == colorOptions.scheme ? 'selected' : 'unselected'"
              [title]="s" (click)="selectCategoricalScheme(s)">
@@ -15,12 +15,14 @@ Categorical
     <br>
     <div class="div_opacity">
         Background Color Opacity
-        <mat-slider min="0" max="1" step="0.05" [(ngModel)]="colorOptions.bgColorOpacity" (ngModelChange)="changeColorProvider()">
+        <mat-slider min="0" max="1" step="0.05">
+            <input matSliderThumb [(ngModel)]="colorOptions.bgColorOpacity" (dragEnd)="changeColorProvider()" />
         </mat-slider>
     </div>
     <div class="div_opacity">
         Border Color Opacity
-        <mat-slider min="0" max="1" step="0.05" [(ngModel)]="colorOptions.borderColorOpacity" (ngModelChange)="changeColorProvider()">
+        <mat-slider min="0" max="1" step="0.05">
+            <input matSliderThumb [(ngModel)]="colorOptions.borderColorOpacity" (dragEnd)="changeColorProvider()" />
         </mat-slider>
     </div>
 </ng-container>
